Removed deprecations